crates/plotnik-tests/tests/macro_ui/fail/unknown_argument.stderr
error: unknown argument `flavor`; `query!` accepts `grammar`, `file`, `crate`, `steps`, `memory`, `depth`, and the query string
 --> tests/macro_ui/fail/unknown_argument.rs:3:5
  |
3 |     flavor = "spicy",
  |     ^^^^^^
